Fix analytics section overflow

--- a/src/style.scss
+++ b/src/style.scss
@@ -27,6 +27,8 @@ body {
 
       .coin-analytics-info {
         padding: 0 1rem;
+        box-sizing: border-box;
+
         p {
           color: gray;
         }
